--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^18.7.13",
     "@zeit/next-sass": "^1.0.1",
+    "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
     "next": "12.2.5",
     "node-sass": "^7.0.1",
